Modified result updater to work with gherkin and better consolidate test runs